<?xml version="1.0"?>
<package format="3">
  <name>argus_v1</name>
  <version>0.1.0</version>
  <description>ARGUS: Continuous LLM-Grounded Perception for Reactive Robot Manipulation</description>
  <maintainer email="sumukha@gatech.edu">Sumukha Srivatsa</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>